[Add] Xcode 11 support, Update swift version and code accordingly, update deprecated methods. [Fixed] all crash . Now it is ruinable in Xcode 11

--- a/VimoHeartRate WatchKit App Extension/Info.plist
+++ b/VimoHeartRate WatchKit App Extension/Info.plist
@@ -20,8 +20,12 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>Share workout data with other apps.</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>Read heart rate monitor data.</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
