--- a/VimoHeartRate WatchKit App/Info.plist
+++ b/VimoHeartRate WatchKit App/Info.plist
@@ -18,6 +18,10 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>Share workout data with other apps.</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>Read heart rate monitor data.</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
